feat: Remove Admin
