# app/common/config/swagger-output.json
@@ -238,7 +238,7 @@
         "description": "This route is used to get a group by id.",
         "parameters": [
           {
-            "name": "groupId",
+            "name": "id",
             "in": "path",
             "required": true,
             "type": "string"
@@ -254,7 +254,7 @@
         "description": "Deletes a group by id.",
         "parameters": [
           {
-            "name": "groupId",
+            "name": "id",
             "in": "path",
             "required": true,
             "type": "string"
@@ -270,7 +270,7 @@
         "description": "This route is used to update a group.",
         "parameters": [
           {
-            "name": "groupId",
+            "name": "id",
             "in": "path",
             "required": true,
             "type": "string"
@@ -310,7 +310,7 @@
         "description": "This route will add a member to a group.",
         "parameters": [
           {
-            "name": "groupId",
+            "name": "id",
             "in": "path",
             "required": true,
             "type": "string"
@@ -337,6 +337,71 @@
           }
         }
       }
+    },
+    "/groups/{id}/make": {
+      "put": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "adminId": {
+                  "example": "any"
+                },
+                "memberId": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/groups/{id}/removeAd": {
+      "put": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "adminId": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
     }
   }
 }
+
+
